<resources>
    <string name="empty" />
    <string name="app_name">ViPER4Android FX</string>
    <string name="select_configuration_title">ViPER4Android FX</string>
    <string name="headset_title">Headset</string>
    <string name="speaker_title">Phone Speaker</string>
    <string name="bluetooth_title">Bluetooth Device</string>
    <string name="usb_title">USB/Dock</string>
    <string name="audio_effects">Audio Effects</string>
    <string name="dsp_settings_headset">Effect Settings - Headset</string>
    <string name="dsp_settings_speaker">Effect Settings - Phone Speaker</string>
    <string name="dsp_settings_bluetooth">Effect Settings - Bluetooth Device</string>
    <string name="dsp_settings_usb">Effect Settings - USB Device</string>
    <string name="pref_dsp_enable">Enable</string>
    <string name="pref_effect_title">Select Effect Strength</string>
    <string name="dialog_effect">Effect Strength</string>
    <string name="pref_force_enable_text">Force Enable V4A</string>
    <string name="pref_force_enable_warn">"Turning on Force-Enable could solve the no effect problem. 
In certain roms, you may get unexpected results such as no sound and battery drain. 
Use at your own risk. If such things happen, please turn this off."</string>
    <string name="pref_fx_master_title">Master Power</string>
    <string name="pref_fx_master_summary_on">V4A-FX is powered on</string>
    <string name="pref_fx_master_summary_off">V4A-FX is powered off</string>
    <string name="pref_spkfx_master_title">Master Power</string>
    <string name="pref_spkfx_master_summary_on">V4A-SpeakerFX is powered on</string>
    <string name="pref_spkfx_master_summary_off">V4A-SpeakerFX is powered off</string>
    <string name="pref_fx_limiter_title">Master Gate (Limiter)</string>
    <string name="pref_fx_limiter_threshold">Limit Threshold</string>
    <string name="pref_spkfx_limiter_title">Master Gate (Limiter)</string>
    <string name="pref_spkfx_limiter_threshold">Limit Threshold</string>
    <string name="pref_output_gain">Output Gain</string>
    <string name="pref_output_pan">Channel Pan</string>
    <string name="pref_playback_title">Playback Gain Control</string>
    <string name="pref_playback_summary_on">PlaybackAGC is enabled</string>
    <string name="pref_playback_summary_off">PlaybackAGC is disabled</string>
    <string name="pref_playback_output_threshold">Max Output</string>
    <string name="pref_playback_maxgain">Max Gain</string>
    <string name="pref_xloud_title">eXtra Loud</string>
    <string name="pref_xloud_summary_on">eXtra-Loud is enabled</string>
    <string name="pref_xloud_summary_off">eXtra-Loud is disabled</string>
    <string name="pref_xloud_output_amplifer">Output Gain</string>
    <string name="pref_xloud_spk_lowfreq">Low Response</string>
    <string name="pref_xloud_spk_highfreq">High Response</string>
    <string name="pref_spk_opt_title">Speaker Optimization</string>
    <string name="pref_spk_opt_summary_on">Speaker optimization is enabled</string>
    <string name="pref_spk_opt_summary_off">Speaker optimization is disabled</string>
    <string name="pref_viperddc_title">ViPER-DDC</string>
    <string name="pref_viperddc_summary_on">ViPER-DDC is enabled</string>
    <string name="pref_viperddc_summary_off">ViPER-DDC is disabled</string>
    <string name="pref_viperddc_enable">Enable</string>
    <string name="pref_viperddc_device">Listening Device</string>
    <string name="pref_viperddc_device_manufacturer">Select Manufacturer</string>
    <string name="pref_viperddc_device_model">Select Model</string>
    <string name="pref_viperddc_tips">"NOTICE: 
ViPER-DDC is a true Hi-Fi audio processor and is used for headset correction. 
ViPER-DDC now supports nearly 500 headphones, and will continue to support more as time goes on. 
If you can't find your headset in the list, please disable this feature until yours is added."</string>
    <string name="pref_vse_title">Spectrum Extension</string>
    <string name="pref_vse_summary_on">Spectrum extension is enabled</string>
    <string name="pref_vse_summary_off">Spectrum extension is disabled</string>
    <string name="pref_vse_enable">Enable</string>
    <string name="pref_vse_strength">Strength</string>
    <string name="pref_vse_strength_title">Select Strength</string>
    <string name="pref_vse_tips">"NOTICE: 
Spectrum extension is a true Hi-Fi audio processor and it is used for extending the lossy compressed spectrum. 
If you are playing lossy compressed music(such mp3, aac, ogg), this feature may give a lossless feeling. 
However, if you are playing lossless music, we recommend you to disable this feature."</string>
    <string name="pref_equalizer_title">FIREqualizer</string>
    <string name="pref_equalizer_summary_on">FIREqualizer is enabled</string>
    <string name="pref_equalizer_summary_off">FIREqualizer is disabled</string>
    <string name="pref_equalizer_enable">Enable</string>
    <string name="pref_equalizer_preset_title">Select Preset</string>
    <string name="pref_dynamicsystem_title">Dynamic System</string>
    <string name="pref_dynamicsystem_summary_on">Dynamic system is enabled</string>
    <string name="pref_dynamicsystem_summary_off">Dynamic system is disabled</string>
    <string name="pref_dynamicsystem_enable">Enable</string>
    <string name="pref_dynamicsystem_output">Listening Device</string>
    <string name="pref_dynamicsystem_output_title">Select Listening Device</string>
    <string name="pref_dynamicsystem_bass">Select Dynamic Bass</string>
    <string name="pref_dynamicsystem_tube_title">Tube Sound Simulator (6N1J)</string>
    <string name="pref_dynamicsystem_tube_summary_on">Tube sound simulator is enabled</string>
    <string name="pref_dynamicsystem_tube_summary_off">Tube sound simulator is disabled</string>
    <string name="pref_fidelity_title">Fidelity Control</string>
    <string name="pref_fidelity_vb_summary_on">ViPER Bass is enabled</string>
    <string name="pref_fidelity_vb_summary_off">ViPER Bass is disabled</string>
    <string name="pref_fidelity_vb_enable">Enable ViPER Bass</string>
    <string name="pref_fidelity_vb_mode">Bass Mode</string>
    <string name="pref_fidelity_vb_mode_title">Select Bass Mode</string>
    <string name="pref_fidelity_vb_bassfreq">Bass Frequency</string>
    <string name="pref_fidelity_vb_bassfreq_title">Select Bass Frequency</string>
    <string name="pref_fidelity_vb_bassgain">Bass Boost</string>
    <string name="pref_fidelity_vb_bassgain_title">Select Bass Boost</string>
    <string name="pref_fidelity_vc_summary_on">ViPER Clarity is enabled</string>
    <string name="pref_fidelity_vc_summary_off">ViPER Clarity is disabled</string>
    <string name="pref_fidelity_vc_enable">Enable ViPER Clarity</string>
    <string name="pref_fidelity_vc_mode">Clarity Mode</string>
    <string name="pref_fidelity_vc_mode_title">Select Clarity Mode</string>
    <string name="pref_fidelity_vc_bassgain">Clarity</string>
    <string name="pref_fidelity_vc_bassgain_title">Select Clarity</string>
    <string name="pref_curesystem_title">Auditory System Protection</string>
    <string name="pref_curesystem_summary_on">Cure Tech+ is enabled</string>
    <string name="pref_curesystem_summary_off">Cure Tech+ is disabled</string>
    <string name="pref_curesystem_enable">Enable</string>
    <string name="pref_select_cure_cf_title">Select Binaural Level</string>
    <string name="dialog_cure_crossfeed">Binaural Level</string>
    <string name="pref_convolver_title">Convolver</string>
    <string name="pref_convolver_summary_on">Convolver is enabled</string>
    <string name="pref_convolver_summary_off">Convolver is disabled</string>
    <string name="pref_convolver_enable">Enable</string>
    <string name="pref_convolver_knl">Impulse Response</string>
    <string name="pref_convolver_knl_title">Select Impulse Response</string>
    <string name="pref_convolver_crosschannel">Cross Channel</string>
    <string name="pref_convolver_crosschannel_title">Select Cross Channel</string>
    <string name="pref_vhs_title">Headphone Surround +</string>
    <string name="pref_vhs_summary_on">VHS+ is enabled</string>
    <string name="pref_vhs_summary_off">VHS+ is disabled</string>
    <string name="pref_vhs_enable">Enable</string>
    <string name="pref_select_vhs_qual_title">Select Effect Level</string>
    <string name="dialog_vhs_qual">Effect Level</string>
    <string name="pref_colorfulmusic_title">Field Surround</string>
    <string name="pref_colorfulmusic_summary_on">Field surround is enabled</string>
    <string name="pref_colorfulmusic_summary_off">Field surround is disabled</string>
    <string name="pref_colorfulmusic_enable">Enable</string>
    <string name="pref_select_colorfulmusic_title">Select Field Surround Strength</string>
    <string name="dialog_colorfulmusic">Field Surround Strength</string>
    <string name="pref_select_colorfulmusic_mi_title">Select Mid Image Strength</string>
    <string name="dialog_colorfulmusic_mi">Mid Image Strength</string>
    <string name="pref_diffsurr_title">Differential Surround</string>
    <string name="pref_diffsurr_summary_on">Diff surround is enabled</string>
    <string name="pref_diffsurr_summary_off">Diff surround is disabled</string>
    <string name="pref_diffsurr_enable">Enable</string>
    <string name="pref_select_diffsurr_ms_title">Select Delay Time</string>
    <string name="dialog_diffsurr_ms">Delay Time</string>
    <string name="pref_reverb_title">Reverberation</string>
    <string name="pref_reverb_summary_on">Reverberation is enabled</string>
    <string name="pref_reverb_summary_off">Reverberation is disabled</string>
    <string name="pref_reverb_enable">Enable</string>
    <string name="pref_reverb_roomsize">Room Size</string>
    <string name="pref_reverb_width">Sound Field</string>
    <string name="pref_reverb_damp">Damping Factor</string>
    <string name="pref_reverb_wet">Wet Signal</string>
    <string name="pref_reverb_dry">Dry Signal</string>
    <string name="eq_preset_acoustic">Acoustic</string>
    <string name="eq_preset_bass_booster">Bass Booster</string>
    <string name="eq_preset_bass_reducer">Bass Reducer</string>
    <string name="eq_preset_classical">Classical</string>
    <string name="eq_preset_deep">Deep</string>
    <string name="eq_preset_flat">Flat</string>
    <string name="eq_preset_r_and_b">R&amp;B</string>
    <string name="eq_preset_rock">Rock</string>
    <string name="eq_preset_small_speakers">Small Speakers</string>
    <string name="eq_preset_treble_booster">Treble Booster</string>
    <string name="eq_preset_treble_reducer">Treble Reducer</string>
    <string name="eq_preset_vocal_booster">Vocal Booster</string>
    <string name="eq_preset_custom">Custom</string>
    <string name="text_ir_dir_isempty">ViPER4Android: The IR sample directory %1$s is empty.</string>
    <string name="text_token_lost">ViPER4Android: A running program has requested Android to disable audio effects, so V4A will be temporarily disabled.</string>
    <string name="text_enabled">Enabled</string>
    <string name="text_disabled">Disabled</string>
    <string name="text_headset">Headset</string>
    <string name="text_bluetooth">Bluetooth</string>
    <string name="text_speaker">Speaker</string>
    <string name="text_usb">USB/Dock</string>
    <string name="text_showtrayicon">Show Notification</string>
    <string name="text_hidetrayicon">Hide Notification</string>
    <string name="text_lockeffect">Lock Effect Mode</string>
    <string name="text_yes">Yes</string>
    <string name="text_no">No</string>
    <string name="text_normal">Normal</string>
    <string name="text_abnormal">Abnormal</string>
    <string name="text_supported">Supported</string>
    <string name="text_unsupported">Unsupported</string>
    <string name="text_loadfxprofile">Load Effect Profile</string>
    <string name="text_newfxprofile">New Effect Profile…</string>
</resources>