<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
  xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_spkfx_master_title">
        <CheckBoxPreference android:title="@string/pref_dsp_enable" android:key="viper4android.speakerfx.enable" android:summaryOn="@string/pref_spkfx_master_summary_on" android:summaryOff="@string/pref_spkfx_master_summary_off" android:disableDependentsState="false" />
        <CheckBoxPreference android:title="@string/pref_force_enable_text" android:key="viper4android.global.forceenable.enable" android:disableDependentsState="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_equalizer_title">
        <CheckBoxPreference android:title="@string/pref_equalizer_enable" android:key="viper4android.headphonefx.fireq.enable" android:summaryOn="@string/pref_equalizer_summary_on" android:summaryOff="@string/pref_equalizer_summary_off" android:disableDependentsState="false" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/equalizer_preset_modes" android:title="@string/pref_equalizer_preset_title" android:key="viper4android.headphonefx.fireq" android:defaultValue="0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;0.0;" android:dialogTitle="@string/pref_equalizer_preset_title" android:entryValues="@array/equalizer_preset_values" />
        <com.vipercn.viper4android_v2.preference.EqualizerPreference android:key="viper4android.headphonefx.fireq.custom" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_convolver_title">
        <CheckBoxPreference android:title="@string/pref_convolver_enable" android:key="viper4android.headphonefx.convolver.enable" android:summaryOn="@string/pref_convolver_summary_on" android:summaryOff="@string/pref_convolver_summary_off" android:disableDependentsState="false" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreferenceWithCustom android:title="@string/pref_convolver_knl" android:key="viper4android.headphonefx.convolver.kernel" android:defaultValue="" android:dialogTitle="@string/pref_convolver_knl_title" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/conv_cross_channel" android:title="@string/pref_convolver_crosschannel" android:key="viper4android.headphonefx.convolver.crosschannel" android:defaultValue="0" android:dialogTitle="@string/pref_convolver_crosschannel_title" android:entryValues="@array/conv_cross_channel_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_reverb_title">
        <CheckBoxPreference android:title="@string/pref_reverb_enable" android:key="viper4android.headphonefx.reverb.enable" android:summaryOn="@string/pref_reverb_summary_on" android:summaryOff="@string/pref_reverb_summary_off" android:disableDependentsState="false" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/reverb_roomsize" android:title="@string/pref_reverb_roomsize" android:key="viper4android.headphonefx.reverb.roomsize" android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/reverb_roomsize_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/reverb_roomwidth" android:title="@string/pref_reverb_width" android:key="viper4android.headphonefx.reverb.roomwidth" android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/reverb_roomwidth_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/reverb_percent" android:title="@string/pref_reverb_damp" android:key="viper4android.headphonefx.reverb.damp" android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/reverb_percent_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/reverb_percent" android:title="@string/pref_reverb_wet" android:key="viper4android.headphonefx.reverb.wet" android:defaultValue="0" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/reverb_percent_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/reverb_percent" android:title="@string/pref_reverb_dry" android:key="viper4android.headphonefx.reverb.dry" android:defaultValue="50" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/reverb_percent_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_spk_opt_title">
        <CheckBoxPreference android:title="@string/pref_dsp_enable" android:key="viper4android.speakerfx.spkopt.enable" android:summaryOn="@string/pref_spk_opt_summary_on" android:summaryOff="@string/pref_spk_opt_summary_off" android:disableDependentsState="false" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_xloud_title">
        <CheckBoxPreference android:title="@string/pref_dsp_enable" android:key="viper4android.headphonefx.playbackgain.enable" android:summaryOn="@string/pref_xloud_summary_on" android:summaryOff="@string/pref_xloud_summary_off" android:disableDependentsState="false" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/playbackgain_ratio" android:title="@string/pref_effect_title" android:key="viper4android.headphonefx.playbackgain.ratio" android:defaultValue="50" android:dialogTitle="@string/dialog_effect" android:entryValues="@array/playbackgain_ratio_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/multi_factor" android:title="@string/pref_playback_maxgain" android:key="viper4android.headphonefx.playbackgain.maxscaler" android:defaultValue="400" android:dialogTitle="@string/dialog_effect" android:entryValues="@array/multi_factor_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/output_db" android:title="@string/pref_playback_output_threshold" android:key="viper4android.headphonefx.playbackgain.volume" android:defaultValue="80" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/output_db_values" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_spkfx_limiter_title">
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/output_volume" android:title="@string/pref_output_gain" android:key="viper4android.headphonefx.outvol" android:defaultValue="100" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/output_volume_values" />
        <com.vipercn.viper4android_v2.preference.SummariedListPreference android:entries="@array/output_db" android:title="@string/pref_spkfx_limiter_threshold" android:key="viper4android.speakerfx.limiter" android:defaultValue="100" android:dialogTitle="@string/pref_effect_title" android:entryValues="@array/output_db_values" />
    </PreferenceCategory>
</PreferenceScreen>